# ai-hedge-fund

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: main.py  tickers.csv
app/agents/: README.md  main_agent.py
app/agents/aswath_damodaran_agent/: agent.py
app/agents/ben_graham_agent/: agent.py
app/agents/bill_ackman_agent/: agent.py  prompt.py
app/agents/cathie_wood_agent/: agent.py  prompt.py
app/agents/charlie_munger_agent/: agent.py
app/api/: README.md
app/clients/: README.md  trading212_client.py  yfinance_client.py
app/core/: README.md  config.py
app/models/: README.md  investors_models.py  management_models.py  quants_models.py  trading212_models.py
app/runner/: README.md  runner.py
app/services/: README.md  watchlist_service.py
app/tools/: README.md  calculation_tools.py  trading212_tools.py  yfinance_tools.py
app/utils/: README.md  ticker_utils.py
src/: pipeline.py  runner.py
src/clients/: FinnhubClient.py  Trading212.py
src/tools/: ackman_analysis.py  buffett_analysis.py  burry_analysis.py  cathie_wood_analysis.py  damodaran_analysis.py  druckenmiller_analysis.py  fisher_analysis.py  fundamental_analysis.py  graham_analysis.py  growth_analysis.py  jhunjhunwala_analysis.py  lynch_analysis.py  munger_analysis.py  pabrai_analysis.py  portfolio_management.py  risk_analysis.py  sentiment_analysis.py  technical_analysis.py  valuation_analysis.py
src/utils/: context_builder.py  model_selector.py  schema_validators.py
tests/: test_main.py
utils/: design.py  file_helper.py  prompts.py  video_helper.py
(+156 files in other folders)
