[project]
name = "ai-hedge-fund"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=1.31.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]
