[project]
name = "ai-hedge-fund"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=1.31.1",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyfinviz>=1.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "yfinance>=1.3.0",
]
